# dialogflow-backend

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
.helix/: languages.toml
src/: lib.rs  main.rs
src/ai/: chat.rs  completion.rs  crud.rs  embedding.rs  gemma.rs  huggingface.rs  llama.rs  mod.rs  phi3.rs
src/db/: embedding.rs  mod.rs
src/flow/demo/: demo_collect.txt  demo_collect_en.txt  demo_notify.txt  demo_notify_en.txt  demo_repay.txt  demo_repay_en.txt  mod.rs
src/flow/mainflow/: crud.rs
src/flow/rt/: collector.rs  condition.rs  context.rs  convertor.rs  crud.rs  dto.rs  executor.rs  facade.rs  node.rs  node_dyn.rs  node_typetag.rs
src/flow/subflow/: crud.rs  dto.rs
src/intent/: crud.rs  detector.rs  dto.rs  embedding.rs  mod.rs  phrase.rs
src/kb/: crud.rs  doc.rs  docx.rs  dto.rs  mod.rs  qa.rs
src/man/: settings.rs
src/resources/assets/assets/: canvas-ebZo_yLf.js  index-352fadb6.js  index-3syoVsug.js  index-666eacd8.css  index-769b82be.js  index-93NIe4JJ.css  index-9D092EYe.js  index-B171WFUU.js  index-B2kCm4YY.css  index-B4PwGmOZ.css  index-BisrZMCw.js  index-BjYMHWgz.css  index-CFMBpwmb.css  index-CGwDfCl8.js  index-CI0yDkE7.js  index-CQUEiyGj.js  index-Cb6_iPA-.css  index-D0EGhxTc.js  index-DXJ5f3Oq.js  index-DaTxxXw1.js  index-DpRbUEHB.css  index-DqXuk36F.css  index-J5BfAI_8.js  index-MTyOoNFh.js  index-X6IkoCLM.css  index-a37788f1.css  index-a8d4c523.css  index-cc9d124f.js  index-cf1a9bcb.js  index-dHLMxLrC.css  index-dbfrgCNZ.js  index-f1ff0580.css  index-iCGkRJ-1.css  index-nZTXeCG7.js  index-naI8Vgvx.css
src/result/: mod.rs
src/robot/: crud.rs  dto.rs
src/test/: mod.rs  reqwest.rs
src/variable/: crud.rs  dto.rs
src/web/: asset.rs  asset.txt  server.rs
