[package]
name = "dialogflow"
version = "1.10.2"
edition = "2021"
homepage = "https://dialogflowchatbot.github.io/"
authors = ["dialogflowchatbot <dialogflow@yeah.net>"]

[lib]
name = "dialogflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/djkoloski/rust_serialization_benchmark

[dependencies]
# artful = "0.1.1"
axum = {version = "0.7", features = ["query"]}
bigdecimal = "0.4"
colored = "2.1"
# dashmap = "5.5.1"
enum_dispatch = "0.3"
erased-serde = "0.4"
itoa = "1.0"
# jieba-rs = "0.6.7"
once_cell = "1.19"
redb = "2.1"
regex = "1.10"
reqwest = "0.12"
rkyv = {version = "0.7", features = ["validation"]}
scru128 = "3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
scraper = "0.19"
# snmalloc-rs = "0.3.4" # 暂时不支持MUSL
# simd-json = "0.10"
# simsearch = "0.2"
# strsim = "0.10.0"
# textdistance = "1.0.2"
time = { version = "0.3", features = ["formatting"] }
tower-http = { version = "0.5", features = ["cors"] }
# typetag = "0.2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "time"] }
# tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.11"
lettre = { version = "0.11", features = ["tokio1", "smtp-transport", "tokio1-native-tls", "pool"]}
unicase = "2.7.0"
# triple_accel = "0.4.0"

[build-dependencies]
flate2 = "1.0"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.56", features = ["Win32_Globalization","Win32_System_SystemServices"]}

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
# https://doc.rust-lang.org/reference/conditional-compilation.html
[target.'cfg(target_env = "gnu")'.dependencies]
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.dev]
debug = 2
debug-assertions = true
overflow-checks = true
opt-level = 0
lto = false
panic = 'unwind'
rpath = false

[profile.test]
debug = 1

[profile.bench]
debug = 1

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 3
codegen-units = 1
lto = true
panic = 'abort'
